Convert password flow to module with property-driven configuration.